# storage/api-docs/api-docs.json
@@ -347,6 +347,98 @@
                     }
                 ]
             }
+        },
+        "/api/user": {
+            "put": {
+                "tags": [
+                    "User"
+                ],
+                "description": "Update User",
+                "operationId": "1d79891275534dc3dbc19f2cb56c8023",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "email",
+                                    "password",
+                                    "password_confirmation"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "description": "Name",
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "description": "E-mail",
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "description": "Password",
+                                        "type": "string"
+                                    },
+                                    "password_confirmation": {
+                                        "description": "Password Confirmation",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            },
+                            "example": {
+                                "name": "User Teste - UPDATED",
+                                "email": "email@email.com",
+                                "password": "user_teste_pass",
+                                "password_confirmation": "user_teste_pass"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "202": {
+                        "description": "User updated successfully!",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "example": {
+                                                "meta": {
+                                                    "code": 202,
+                                                    "status": "success",
+                                                    "message": "User updated successfully!"
+                                                },
+                                                "data": {
+                                                    "user": {
+                                                        "id": 11,
+                                                        "name": "User Teste - UPDATED",
+                                                        "email": "email@email.com",
+                                                        "email_verified_at": null,
+                                                        "created_at": "2024-07-29T17:18:41.000000Z",
+                                                        "updated_at": "2024-07-29T17:53:34.000000Z"
+                                                    }
+                                                },
+                                                "access_token": {
+                                                    "token": "20|Iu1Ukr9PAgWCSzWbpoJm7O6lcxDk3bVU1PFFcEFz0842a61c",
+                                                    "type": "Bearer"
+                                                }
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -364,6 +456,10 @@
         {
             "name": "Authenticate",
             "description": "Authenticate"
+        },
+        {
+            "name": "User",
+            "description": "User"
         }
     ]
 }
